# Currency-Conversion-System

./: .gitignore  README  README.md  pyproject.toml
curreny_sub_system/: celerybeat-schedule  db.sqlite3  manage.py  test.py
curreny_sub_system/authentication/: models.py  urls.py  views.py
curreny_sub_system/authentication/migrations/: 0001_initial.py
curreny_sub_system/conversion/: models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
curreny_sub_system/conversion/migrations/: 0001_initial.py  0002_alter_currencyconversion_conversion_rate.py  0002_conversion_delete_conversionhistory_and_more.py  0003_alter_currencyconversion_amount.py  0004_delete_conversionrate.py
curreny_sub_system/curreny_sub_system/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
curreny_sub_system/history/: models.py
curreny_sub_system/history/migrations/: 0001_initial.py
