[tool.poetry]
name = "currency-conversion-system"
version = "0.1.0"
description = ""
authors = ["MennaFahmy <menna.e.zahran@gmal.com>"]
readme = "README.md"
packages = [{include = "currency_conversion_system"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.2.7"
django-debug-toolbar = "^4.2.0"
django-environ = "^0.11.2"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
